
* GITHUB#11895: count() in BooleanQuery could be early quit. (Lu Xugang)

* GITHUB#11972: `IndexSortSortedNumericDocValuesRangeQuery` can now also
  optimize query execution with points for descending sorts. (Adrien Grand)

* GITHUB#12006: Do ints compare instead of ArrayUtil#compareUnsigned4 in LatlonPointQueries. (Guo Feng)

Other
---------------------

* GITHUB#11856: Fix nanos to millis conversion for tests (Marios Trivyzas)

* LUCENE-10423: Remove usages of System.currentTimeMillis() from tests. (Marios Trivyzas)

* GITHUB#11811: Upgrade google java format to 1.15.0 (Dawid Weiss)

* GITHUB#11834: Upgrade forbiddenapis to version 3.4.  (Uwe Schindler)

* LUCENE-10635: Ensure test coverage for WANDScorer by using a test query. (Zach Chen, Adrien Grand)

* GITHUB#11752: Added interface to relate a LatLonShape with another shape represented as Component2D. (Navneet Verma)

* GITHUB#11983: Make constructors for OffsetFromPositions and OffsetsFromMatchIterator
  public. (Alan Woodward)

* LUCENE-10546: Update Faceting user guide. (Egor Potemkin)

Build
---------------------

* GITHUB#11886: Upgrade to gradle 7.5.1 (Dawid Weiss)

======================== Lucene 9.4.2 =======================

Bug Fixes
---------------------
* GITHUB#11905: Fix integer overflow when seeking the vector index for connections in a single segment.
 This addresses a bug that was introduced in 9.2.0 where having many vectors is not handled well
 in the vector connections reader.

* GITHUB#11939: Fix incorrect cost calculation in DocIdSetBuilder after upgradeToBitSet when doc list is growing.
  This addresses a bug where the cost of TermRangeQuery/TermInSetQuery and some other queries will be highly underestimated.

Improvements
---------------------
* GITHUB#11912, GITHUB#11918: Port generic exception handling from MemorySegmentIndexInput
  to ByteBufferIndexInput. This also adds the invalid position while seeking or reading